# Spaceshield_Hack_2026_PTR_SLS_Digital_Twin_Mission

./: .gitignore  CLAUDE.md  CLAUDE_MD_STRATEGY.md  LICENSE  Makefile  README.md  README_ENG.md  REPO_STRUCTURE.md  golden_preset.json  init_repo_structure.sh  migrate_to_workspace.sh  pyproject.toml
.github/: copilot-instructions.md  get_review.sh
docs/: DESIGN_DECISIONS.md  PHYSICS_MODEL.md  PRESENTATION_OUTLINE.md  SYSTEM_OVERVIEW.md
docs/architecture/: ARCHITECTURE_DECISIONS.md  COMMUNICATION.md  PHYSICS_THEORY_BASE.md  REPO_STRUCTURE.txt
docs/challenge/: GENERAL_TASK_SUMMARY.md  URL.md
docs/decisions/: ADR-graceful-ai-degradation.md
docs/goal/: PROGRESS.md
docs/rules/: COMMIT_CONVENTIONS.md
docs/tasks/: BRIEF-api-01-vertical-slice.md  BRIEF-engine-01-vertical-slice.md  BRIEF-engine-02-thickening.md  BRIEF-engine-03-gravity-turn.md  BRIEF-frontend-01-vertical-slice.md  BRIEF-frontend-02.md  BRIEF-frontend-visual-enrichment.md  GOLDEN_PRESET.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/api/: client.ts
frontend/src/components/: MissionTimeline.tsx  OrbitalPlot.tsx  RocketForm.tsx  StageCard.tsx  TelemetryFieldChart.tsx  TelemetryHUD.tsx  TrajectoryChart.tsx  VerdictCard.tsx
frontend/src/data/: preset.ts  syntheticResult.ts
frontend/src/types/: contracts.ts
presentation/: Rocket_Digital_Twin__SpatiumCavum_team.pptx
scripts/bootstrap/: init_environment.sh
scripts/dev/: dump_repo_structure.sh  install_qpdf.sh
src/: CLAUDE.md
