# Virtual workspace root - bez [project], tylko organizacja czlonow.
# Patrz: docs/architecture/ARCHITECTURE_DECISIONS.md
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
contracts      = { workspace = true }
physics-engine = { workspace = true }
api            = { workspace = true }
ai             = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]

[tool.ruff]
line-length = 100
